@@ -1,8 +1,9 @@
-=======
 4.7
 ----
 * Further improvements on data.fmquestion
 * Improvements on data.intervention
+* Page size increase for speed up
+* Improvement on data.partner by preetching related T2FTravelactivity 
 
 4.6.1 
 ----
